# context

./: .gitattributes  README.adoc  context-readme.txt
colors/icc/context/: colorprofiles.xml
colors/icc/profiles/: colo-imp-icc.rme
context/data/signal/: ctxsignals-template.lua
scripts/context/lua/: mtx-bibtex.lua  mtx-cache.lua  mtx-colors.lua  mtx-context.lua  mtx-context.xml  mtx-convert.lua  mtx-ctan.lua  mtx-epub.lua  mtx-fixpdf.lua  mtx-fonts.lua  mtx-grep.lua  mtx-install-modules.lua  mtx-install-tikz.lua  mtx-install.lua  mtx-interface.lua  mtx-kpse.lua  mtx-mk-help.lua  mtx-movie.lua  mtx-patterns.lua  mtx-pdf.lua  mtx-plain.lua  mtx-profile.lua  mtx-scite.lua  mtx-server-ctx-fonttest.lua  mtx-server.lua  mtx-signal.lua  mtx-spell.lua  mtx-squid.lua  mtx-synctex.lua  mtx-testsuite.lua  mtx-tools.lua  mtx-unicode.lua  mtx-update.lua  mtx-vscode.lua  mtx-watch.lua  mtxrun.lua
source/luametatex/: CMakeLists.txt  CMakeSettings.json  build-armhf-64.sh  build-freebsd-64.sh  build-linux-32.sh  build-linux-64.sh  build-mingw-32.sh  build-mingw-64.sh  build-openbsd-64.sh  build-osx-64.sh  build.sh  build.txt
source/luametatex/cmake/: debug.cmake  filib.cmake  lua.cmake  lua_fpic.cmake  luametatex.cmake  luaoptional.cmake  luarest.cmake  luasocket.cmake  mimalloc.cmake  mp.cmake  nanojpeg.cmake  potrace.cmake  qrcodegen.cmake  softposit.cmake  tex.cmake  triangles.cmake
source/luametatex/source/libs/libcerf/lib/: CMakeLists.txt  c.h  cerf.h  cpp.h  defs.h  erfcx.c  err_fcts.c  im_w_of_x.c  w_of_z.c  width.c
web2c/: contextcnf.lua  readme.txt
(+3080 files in other folders)
